# lambda

./: CMakeLists.txt  README.md  c++11_lambda.cpp  c++14_lambda.cpp  c++17_lambda.cpp  c++20_lambda.cpp  c++20_lambda_test.cpp  c++98_03_callable_object.cpp
